[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/controller/AkunController.gd" type="Script" id=1]
[ext_resource path="res://asset/ui/ui.theme" type="Theme" id=2]
[ext_resource path="res://asset/ui/msgbox/MsgBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/lib/DBconnection.res" type="PackedScene" id=4]

[node name="pengusaha" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.2277
margin_top = 18.2278
margin_right = -134.772
margin_bottom = 178.228
script = ExtResource( 1 )

[node name="DBconnection" parent="." instance=ExtResource( 4 )]

[node name="id" type="LineEdit" parent="."]
visible = false
margin_left = 14.0
margin_top = 22.0
margin_right = 444.0
margin_bottom = 46.0
theme = ExtResource( 2 )
align = 1
placeholder_text = "Nama belakang"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in_fname" type="LineEdit" parent="."]
margin_left = 14.0
margin_top = 22.0
margin_right = 444.0
margin_bottom = 46.0
theme = ExtResource( 2 )
align = 1
placeholder_text = "Nama belakang"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="in_lname" type="LineEdit" parent="."]
margin_left = 14.0
margin_top = 64.5995
margin_right = 444.0
margin_bottom = 88.5995
theme = ExtResource( 2 )
align = 1
placeholder_text = "Nama depan"

[node name="in_surel" type="LineEdit" parent="."]
margin_left = 13.6786
margin_top = 109.479
margin_right = 443.679
margin_bottom = 133.479
theme = ExtResource( 2 )
align = 1
placeholder_text = "Alamat Surel"

[node name="in_sandi" type="LineEdit" parent="."]
margin_left = 14.6786
margin_top = 151.263
margin_right = 444.679
margin_bottom = 175.263
theme = ExtResource( 2 )
align = 1
secret = true
placeholder_text = "Kata Sandi"

[node name="btn_simpan" type="Button" parent="."]
margin_left = 13.6786
margin_top = 195.263
margin_right = 445.679
margin_bottom = 218.263
theme = ExtResource( 2 )
text = "Simpan"

[node name="MsgBox" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 350.0
margin_top = -18.0
margin_right = 129.0
margin_bottom = 3.99976
[connection signal="request_completed" from="DBconnection" to="." method="request_completed"]
[connection signal="button_up" from="btn_simpan" to="." method="_on_btn_simpan_button_up"]
